# egglog-ad

./: .gitignore  Cargo.toml  ad.egg  array.egg  deriv.egg  f-smooth.egg  flake.nix  lang.egg  m-smooth.egg  main.py  optim.egg  pair.egg  pyproject.toml  runtest  scalar.egg  test.egg
examples/: dot.rs  prod.rs  sum.rs
src/: builtins.rs  deriv.egg  deriv.rs  dsl.rs  f-smooth.egg  f_smooth.rs  lib.rs  main.rs  optim.egg  optim.rs  utils.rs
